--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,6 +22,11 @@ h6 {
   color: #1e1e1e;
 }
 
+.entryWithLogo img{
+  width: 60px !important;
+  height: 60px !important;
+}
+
 a {
   color: #1e1e1e;
   text-decoration: none;
